# CarEngine

./: .gitattributes  .gitignore  README.md
CarEngine/: CMakeLists.txt
CarEngine/CarEngine/: CMakeLists.txt
CarEngine/CarEngine/Assets/Models/: Box.gltf  Plane.gltf
CarEngine/CarEngine/Assets/Textures/UI/: UIButton_Attribution.txt
CarEngine/CarEngine/Shaders/CameraShader/: CameraFragmentShader.glsl  CameraVertexShader.glsl
CarEngine/CarEngine/Shaders/DepthShader/: DepthVertexShader.glsl
CarEngine/CarEngine/Shaders/SkyboxShader/: SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl
CarEngine/CarEngine/Shaders/TextShader/: TextFragmentShader.glsl  TextVertexShader.glsl
CarEngine/CarEngine/Shaders/TilingShader/: TilingFragmentShader.glsl  TilingVertexShader.glsl
CarEngine/CarEngine/Shaders/UIShader/: UIFragmentShader.glsl  UIVertexShader.glsl
CarEngine/CarEngine/Source/: CMakeLists.txt
CarEngine/CarEngine/Source/ActorComponents/: ActorComponent.cpp  ActorComponent.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityCollection.cpp  EntityCollection.h  LightEntity.cpp  LightEntity.h  SkyboxEntity.cpp  SkyboxEntity.h
CarEngine/CarEngine/Source/ActorComponents/Collision/: CollisionBox.cpp  CollisionBox.h  CollisionEntity.cpp  CollisionEntity.h
CarEngine/CarEngine/Source/ActorComponents/Terrain/: TerrainPatchEntity.cpp  TerrainPatchEntity.h  TerrainPlaneEntity.cpp  TerrainPlaneEntity.h
CarEngine/CarEngine/Source/Audio/: AudioClip.cpp  AudioClip.h  AudioPlayer.cpp  AudioPlayer.h
CarEngine/CarEngine/Source/CarSimulation/: CarSimulationHandler.cpp  CarSimulationHandler.h  CarSimulationTransformManager.cpp  CarSimulationTransformManager.h  ContactMethod.h
CarEngine/CarEngine/Source/CarSimulation/Cars/: Car.cpp  Car.h  CarEnums.h  GatorCar.cpp  GatorCar.h  GatorCarActor.cpp  GatorCarActor.h  HmmwvCar.cpp  HmmwvCar.h  HmmwvCarActor.cpp  HmmwvCarActor.h  RcCar.cpp  RcCar.h  RcCarActor.cpp  RcCarActor.h  SedanCar.cpp  SedanCar.h  SedanCarActor.cpp  SedanCarActor.h
CarEngine/CarEngine/Source/CarSimulation/Collision/: Collision.cpp  Collision.h
CarEngine/CarEngine/Source/CarSimulation/Terrain/: Terrain.cpp  Terrain.h  TerrainMesh.cpp  TerrainMesh.h  TerrainPatch.cpp  TerrainPatch.h  TerrainPlane.cpp  TerrainPlane.h
CarEngine/CarEngine/Source/CarSimulation/Terrain/TerrainMaterial/: TerrainMaterial.cpp  TerrainMaterial.h  TerrainRigidMaterial.cpp  TerrainRigidMaterial.h  TerrainSoftMaterial.cpp  TerrainSoftMaterial.h
CarEngine/CarEngine/Source/Core/: AbstractGame.cpp  AbstractGame.h  Actor.cpp  Actor.h  ActorContainer.cpp  ActorContainer.h  Component.cpp  Component.h  Context.cpp  Context.h  Engine.cpp  Engine.h  Event.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Transformable.cpp  Transformable.h  World.cpp  World.h
CarEngine/CarEngine/Source/Input/: ControllerCodes.h  Input.cpp  Input.h  KeyCodes.h  MouseButtonCodes.h
CarEngine/CarEngine/Source/Input/Car/: AutomaticCarInput.cpp  AutomaticCarInput.h  AutomaticRcCarInput.cpp  AutomaticRcCarInput.h  CarInputHandler.cpp  CarInputHandler.h
CarEngine/CarEngine/Source/Rendering/: Light.cpp  Light.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h
CarEngine/CarEngine/Source/Rendering/Material/: ColorMaterial.cpp  ColorMaterial.h  Material.cpp  Material.h  SkyboxMaterial.cpp  SkyboxMaterial.h  TextureMaterial.cpp  TextureMaterial.h
CarEngine/CarEngine/Source/Rendering/Mesh/: Mesh.cpp  Mesh.h  MeshNode.cpp  MeshNode.h  TextQuads.cpp  TextQuads.h
CarEngine/CarEngine/Source/Rendering/Shader/: CameraShader.cpp  CameraShader.h  DepthShader.cpp  DepthShader.h  Shader.cpp  Shader.h  SkyboxShader.cpp  SkyboxShader.h  TextShader.cpp  TextShader.h  TilingShader.cpp  TilingShader.h  UIShader.cpp  UIShader.h
CarEngine/CarEngine/Source/UI/: UIButton.cpp  UIButton.h  UIButtonHandler.cpp  UIButtonHandler.h  UIComponent.cpp  UIComponent.h  UIContainer.cpp  UIContainer.h  UIImage.cpp  UIImage.h  UIPanel.cpp  UIPanel.h  UITextField.cpp  UITextField.h  UITextInputPanel.cpp  UITextInputPanel.h
CarEngine/CarEngine/Source/Utils/: AssetManager.cpp  AssetManager.h  GeneralTransformManager.cpp  GeneralTransformManager.h  Loader.cpp  Loader.h  Materials.cpp  Materials.h  Math.cpp  Math.h  SaveGame.cpp  SaveGame.h  SaveGameManager.cpp  SaveGameManager.h  Timer.cpp  Timer.h
CarEngine/SampleProject/: CMakeLists.txt
CarEngine/SampleProject/Assets/Ground/: GroundTerrain.gltf
CarEngine/SampleProject/Assets/RallyCar/: RallyCar.gltf  RallyCar_Attribution.txt
CarEngine/SampleProject/Source/: Game.cpp  Game.h  Main.cpp
CarEngine/SampleProject/Source/SampleLevel/: DirectionalLight.cpp  DirectionalLight.h  PlayerCar.cpp  PlayerCar.h  SampleLevel.cpp  SampleLevel.h  SampleLevelGeometry.cpp  SampleLevelGeometry.h
